# math-game-bot

./: .gitignore  README.md  pyproject.toml  run.py
math_game_bot/: bot.py  commands.py  equation.py  exceptions.py  interpreter.py  lexer.py  math_game.py  parser.py  parser_.py  token.py  tokens.py  validate.py  values.py
math_game_bot/bot/: equation.py  math_game.py  validate.py
math_game_bot/interpreter/: lexer.py  nodes.py  parser_.py  token_type.py  values.py
